--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -12,6 +12,10 @@
     <input type="text" name="authorName" class="form-control">
   </div>
   <div class="form-group">
+    <label><strong>Genre</strong></label>
+    <input type="text" name="genre" class="form-control">
+  </div>
+  <div class="form-group">
     <label><strong>Article</strong></label>
     <textarea name="content" rows="8" cols="80" class="form-control"></textarea>
   </div>
