designed a template for the page of individual articles and attached them to the posts in homepage

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -42,6 +42,12 @@ html{
   text-align: right;
 }
 
+.page-layout{
+  margin: 2rem 1rem;
+  box-shadow: 0 0 1px;
+  padding: 2rem;
+}
+
 .footer-padding {
 	padding: 60px;
 }
