--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -32,4 +32,4 @@
   <button type="submit" class="btn btn-lg btn-primary">Publish</button>
 </form>
 
-<%- include("partials/home-footer"); %>
+<%- include("partials/footer"); %>
