--- a/views/partials/post-header.ejs
+++ b/views/partials/post-header.ejs
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div id="title" class="container-fluid">
-      <nav class="navbar fixed-top navbar-expand-md navbar-dark">
+      <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-dark">
         <a href="/" class="navbar-brand">
           <!-- IDEA: Logo image can be placed here -->
           Tsunduko
@@ -54,17 +54,6 @@
         </div>
       </nav>
 
-      <div class="container heading">
-        <div class="row">
-          <div class="col-md-6">
-            <h1>Tsunduko</h1>
-            <p style="padding-left:16px;">By the LiQuiD Society</p>
-          </div>
-          <div class="col-md-6">
-            <h3 style="text-align: right;">BML Munjal University</h3>
-          </div>
-        </div>
-      </div>
     </div>
 
-    <div id="body" class="container">
+    <div style="padding-bottom: 28px;"></div>
