Completed articles part of the web application

--- a/views/partials/post-header.ejs
+++ b/views/partials/post-header.ejs
@@ -18,37 +18,34 @@
           <!-- IDEA: Logo image can be placed here -->
           Tsunduko
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        
+        <div class="collapse navbar-collapse" id="navbarSupportedContent2">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a href="#" class="nav-link">Genre 1</a>
+              <a href="/genres/fiction" class="nav-link">Genre 1</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Genre 2</a>
+              <a href="/genres/tech" class="nav-link">Genre 2</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Genre 3</a>
+              <a href="/genres/genre3" class="nav-link">Genre 3</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Genre 4</a>
+              <a href="/genres/genre4" class="nav-link">Genre 4</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Genre 5</a>
+              <a href="/genres/genre5" class="nav-link">Genre 5</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Genre 6</a>
+              <a href="/genres/genre6" class="nav-link">Genre 6</a>
             </li>
           </ul>
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a href="#" class="nav-link">Other 1</a>
+              <a href="/genres/other1" class="nav-link">Other 1</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Other 2</a>
+              <a href="/genres/other2" class="nav-link">Other 2</a>
             </li>
           </ul>
         </div>
