--- a/views/post.ejs
+++ b/views/post.ejs
@@ -8,5 +8,5 @@
 
   <div class="page-layout">
     <h1 class="page-title"><%=result.title%></h1>
-    <p class="page-article"><%=result.content%></p>
+    <p class="page-article"><%-result.content%></p>
   </div>
