--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,7 +18,7 @@
                 <h5 class="card-title"><%=article.title%></h5>
                 <p class="card-text" style="text-align:right;"><%="By " + article.author%></p>
               </div>
-              <p class="card-text"><%=article.content.substring(0,200) + "..."%></p>
+              <p class="card-text"><%-article.content.substring(0,200) + "..."%></p>
               <a href="/articles/<%=article._id%>" class="btn btn-primary">Read More</a>
               <div class="card-footer">
                 <p class="card-text"><%=article.month%>, <%=article.year%></p>
