--- a/views/partials/home-header.ejs
+++ b/views/partials/home-header.ejs
@@ -25,30 +25,30 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a href="#" class="nav-link">Genre 1</a>
+              <a href="/genres/fiction" class="nav-link">Genre 1</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Genre 2</a>
+              <a href="/genres/tech" class="nav-link">Genre 2</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Genre 3</a>
+              <a href="/genres/genre3" class="nav-link">Genre 3</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Genre 4</a>
+              <a href="/genres/genre4" class="nav-link">Genre 4</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Genre 5</a>
+              <a href="/genres/genre5" class="nav-link">Genre 5</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Genre 6</a>
+              <a href="/genres/genre6" class="nav-link">Genre 6</a>
             </li>
           </ul>
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a href="#" class="nav-link">Other 1</a>
+              <a href="/genres/other1" class="nav-link">Other 1</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Other 2</a>
+              <a href="/genres/other2" class="nav-link">Other 2</a>
             </li>
           </ul>
         </div>
