--- a/views/partials/home-header.ejs
+++ b/views/partials/home-header.ejs
@@ -45,7 +45,7 @@
           </ul>
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a href="/genres/other1" class="nav-link">Other 1</a>
+              <a href="/authors" class="nav-link">Authors</a>
             </li>
             <li class="nav-item">
               <a href="/genres/other2" class="nav-link">Other 2</a>
