--- a/views/partials/post-header.ejs
+++ b/views/partials/post-header.ejs
@@ -18,7 +18,7 @@
           <!-- IDEA: Logo image can be placed here -->
           Tsunduko
         </a>
-        
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent2">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
@@ -42,7 +42,7 @@
           </ul>
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a href="/genres/other1" class="nav-link">Other 1</a>
+              <a href="/authors" class="nav-link">Authors</a>
             </li>
             <li class="nav-item">
               <a href="/genres/other2" class="nav-link">Other 2</a>
