--- a/views/partials/home-header.ejs
+++ b/views/partials/home-header.ejs
@@ -8,6 +8,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 
     <title>Tsunduko</title>
   </head>
@@ -25,22 +28,22 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a href="/genres/fiction" class="nav-link">Genre 1</a>
+              <a href="/genres/fiction" class="nav-link">Fiction</a>
             </li>
             <li class="nav-item">
-              <a href="/genres/tech" class="nav-link">Genre 2</a>
+              <a href="/genres/tech" class="nav-link">Tech</a>
             </li>
             <li class="nav-item">
-              <a href="/genres/genre3" class="nav-link">Genre 3</a>
+              <a href="/genres/anime" class="nav-link">Anime</a>
             </li>
             <li class="nav-item">
-              <a href="/genres/genre4" class="nav-link">Genre 4</a>
+              <a href="/genres/kDrama" class="nav-link">K Drama</a>
             </li>
             <li class="nav-item">
-              <a href="/genres/genre5" class="nav-link">Genre 5</a>
+              <a href="/genres/music" class="nav-link">Music</a>
             </li>
             <li class="nav-item">
-              <a href="/genres/genre6" class="nav-link">Genre 6</a>
+              <a href="/genres/horror" class="nav-link">Horror</a>
             </li>
           </ul>
           <ul class="navbar-nav">
@@ -48,7 +51,7 @@
               <a href="/authors" class="nav-link">Authors</a>
             </li>
             <li class="nav-item">
-              <a href="/genres/other2" class="nav-link">Other 2</a>
+              <a href="/about" class="nav-link">About</a>
             </li>
           </ul>
         </div>
