--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,21 +7,21 @@
   <div class="col-md-9">
 
     <%articles.forEach(function(article){%>
-      <div class="card">
+      <div class="card home-card">
         <div class="card-body">
           <div class="row">
             <div class="col-md-4" style="text-align: center;">
               <img class="card-img-top" src="<%=article.imageUrl%>" style="height:100%;overflow:hidden;" alt="Card image cap">
             </div>
             <div class="col-md-8">
-              <div class="card-header">
-                <h5 class="card-title"><%=article.title%></h5>
-                <p class="card-text" style="text-align:right;"><%="By " + article.author%></p>
+              <div class="card-header" style="padding-left:0;">
+                <h5 class="card-title post-title"><%=article.title%></h5>
+                <p href="/authors" class="card-text post-text" style="text-align:right;"><%="By " + article.author%></p>
               </div>
-              <p class="card-text"><%-article.content.substring(0,200) + "..."%></p>
-              <a href="/articles/<%=article._id%>" class="btn btn-primary">Read More</a>
+              <p class="card-text post-text"><%-article.content.substring(0,200) + "..."%></p>
+              <a href="/articles/<%=article._id%>" class="btn btn-sm btn-primary">Read More</a>
               <div class="card-footer">
-                <p class="card-text"><%=article.month%>, <%=article.year%></p>
+                <p class="card-text post-text"><%=article.month%>, <%=article.year%></p>
               </div>
             </div>
           </div>
