Updated the navbar in second header template

--- a/views/partials/post-header.ejs
+++ b/views/partials/post-header.ejs
@@ -25,22 +25,22 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent2">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a href="/genres/fiction" class="nav-link">Genre 1</a>
+              <a href="/genres/fiction" class="nav-link">Fiction</a>
             </li>
             <li class="nav-item">
-              <a href="/genres/tech" class="nav-link">Genre 2</a>
+              <a href="/genres/tech" class="nav-link">Tech</a>
             </li>
             <li class="nav-item">
-              <a href="/genres/genre3" class="nav-link">Genre 3</a>
+              <a href="/genres/anime" class="nav-link">Anime</a>
             </li>
             <li class="nav-item">
-              <a href="/genres/genre4" class="nav-link">Genre 4</a>
+              <a href="/genres/kDrama" class="nav-link">K Drama</a>
             </li>
             <li class="nav-item">
-              <a href="/genres/genre5" class="nav-link">Genre 5</a>
+              <a href="/genres/music" class="nav-link">Music</a>
             </li>
             <li class="nav-item">
-              <a href="/genres/genre6" class="nav-link">Genre 6</a>
+              <a href="/genres/horror" class="nav-link">Horror</a>
             </li>
           </ul>
           <ul class="navbar-nav">
@@ -48,7 +48,7 @@
               <a href="/authors" class="nav-link">Authors</a>
             </li>
             <li class="nav-item">
-              <a href="/genres/other2" class="nav-link">Other 2</a>
+              <a href="/about" class="nav-link">About</a>
             </li>
           </ul>
         </div>
