--- a/views/partials/post-header.ejs
+++ b/views/partials/post-header.ejs
@@ -42,6 +42,9 @@
             <li class="nav-item">
               <a href="/genres/horror" class="nav-link">Horror</a>
             </li>
+            <li class="nav-item">
+              <a href="/genres/selfCare" class="nav-link">Self Care</a>
+            </li>
           </ul>
           <ul class="navbar-nav">
             <li class="nav-item">
