--- a/views/partials/home-header.ejs
+++ b/views/partials/home-header.ejs
@@ -12,14 +12,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 
-    <title>Tsunduko</title>
+    <title>Tsundoku</title>
   </head>
   <body>
     <div id="title" class="container-fluid">
       <nav class="navbar fixed-top navbar-expand-md navbar-dark">
         <a href="/" class="navbar-brand">
           <!-- IDEA: Logo image can be placed here -->
-          Tsunduko
+          Tsundoku
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
