--- a/views/partials/post-header.ejs
+++ b/views/partials/post-header.ejs
@@ -12,14 +12,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 
-    <title>Tsunduko</title>
+    <title>Tsundoku</title>
   </head>
   <body>
     <div id="title" class="container-fluid">
       <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-dark">
         <a href="/" class="navbar-brand">
           <!-- IDEA: Logo image can be placed here -->
-          Tsunduko
+          Tsundoku
         </a>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent2">
