Corrected the name of the magazine again

--- a/views/partials/home-header.ejs
+++ b/views/partials/home-header.ejs
@@ -63,7 +63,7 @@
       <div class="container heading">
         <div class="row">
           <div class="col-md-6">
-            <h1>Tsunduko</h1>
+            <h1>Tsundoku</h1>
             <p style="padding-left:16px;">By the LiQuiD Society</p>
           </div>
           <div class="col-md-6">
