--- a/views/partials/home-header.ejs
+++ b/views/partials/home-header.ejs
@@ -19,7 +19,7 @@
       <nav class="navbar fixed-top navbar-expand-md navbar-dark">
         <a href="/" class="navbar-brand">
           <!-- IDEA: Logo image can be placed here -->
-          Tsundoku
+          TOM
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -63,11 +63,11 @@
       <div class="container heading">
         <div class="row">
           <div class="col-md-6">
-            <h1>Tsundoku</h1>
-            <p style="padding-left:16px;">By the LiQuiD Society</p>
+            <h1>Times of Magazine</h1>
+            <p style="padding-left:16px;">The Most reliable articles humanity has ever seen</p>
           </div>
           <div class="col-md-6">
-            <h3 style="text-align: right;">BML Munjal University</h3>
+            <h3 style="text-align: right;"></h3>
           </div>
         </div>
       </div>
