--- a/views/partials/post-header.ejs
+++ b/views/partials/post-header.ejs
@@ -19,7 +19,7 @@
       <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-dark">
         <a href="/" class="navbar-brand">
           <!-- IDEA: Logo image can be placed here -->
-          Tsundoku
+          TOM
         </a>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent2">
