--- a/views/partials/home-header.ejs
+++ b/views/partials/home-header.ejs
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 
-    <title>Tsundoku</title>
+    <title>TOM</title>
   </head>
   <body>
     <div id="title" class="container-fluid">
